UnCommented VSCode files from .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,12 @@ Release/
 makefile.init
 
 # Visual Studio Code
-#openocd.tcl
-#.vscode/
-#!.vscode/settings.json
-#!.vscode/tasks.json
-#!.vscode/launch.json
-#!.vscode/extensions.json
+openocd.tcl
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 # *.code-workspace
 
 # IAR Embedded Workbench files
